# Notification_service_FastAPI

./: .gitignore  Dockerfile  Makefile  docker-compose.deploy.yml  docker-compose.yaml  log_conf.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflow/: main.yml
.github/workflows/: main.yml  publish.yml
app/: __main__.py  config.py  db.py  dependencies.py  exceptions.py  models.py  repository.py  routers.py  schemas.py  schemes.py  server.py  service.py  utils.py
app/clients/: api_client.py  broker_client.py  email_client.py
app/repository/: campaign.py  notification.py  recipient.py  user.py
app/routers/: campaign.py  notification.py  recipient.py  user.py
app/service/: campaign.py  user.py
app/workers/: campaign_worker.py  email_worker.py
migrations/: env.py
migrations/versions/: 32e762c05250_create_table_user.py  4b1af77eccfe_create_notificaion.py  7f29a816be1a_campaign_create.py  f484b86ad2fa_create_recipient.py
tests/: conftest.py
tests/repository/: test_campaign.py  test_notification.py  test_recipient.py  test_user.py
tests/routers/: test_campaign.py
tests/service/: test_campaign.py  test_user.py
tests/test_campaign/: test_create_campaign.py  test_crud_db.py  test_delete_campaign.py  test_get_all_campaigns.py  test_get_campaign.py  test_update_campaign.py
tests/tests_campaign/tests_repository/: test_create_campaign.py  test_delete_campaign.py  test_get_all_campaigns.py  test_get_campaign.py  test_update_campaign.py
tests/tests_campaign/tests_routers/: test_router_add.py  (+4 more)
tests/workers/: test_campaign_worker.py
(+1 files in other folders)
