[project]
name = "notification-service-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3,<2",
    "asyncpg>=0.30.0",
    "faker>=30.8.0,<31",
    "fastapi[standard]>=0.115.0,<0.116",
    "httpx>=0.27.2,<1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1,<2",
    "uvicorn>=0.30.6,<1",
]

[dependency-groups]
lint = [
    "flake8>=7.1.1",
    "flake8-unused-arguments>=0.0.13",
    "mypy>=1.11.2",
]

tests = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-clarity>=1.0.1,<2",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
    "pytest-testdox>=3.1.0,<4",
    "freezegun>=1.5.1,<2",
]
